# fRAGe

./: .gitignore  README.md  cli.py  config.py  get_books.py  parse_to_md.py  pyproject.toml
books_text/: thinkcomplexity2.md  thinkdsp.md  thinkjava2.md  thinkos.md  thinkpython2.md
markdown/: PhysicalModelingInMatlab4.md  Think-C.md  thinkcomplexity2.md  thinkjava2.md  thinkos.md
